--- a/index.html
+++ b/index.html
@@ -6,10 +6,130 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Huỳnh Tấn Đạt</title>
     <link rel="stylesheet" href="./css/index.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
     <div id="app">
-        Hi, My name is Huỳnh Tấn Đạt
+        <header class="header">
+            <article class="img-profile"></article>
+            <button type="button" class="btn btn-success">Download</button>
+        </header>
+        <main class="main">
+            <span class="name-profile">Hi, I'm Huỳnh Tấn Đạt</span>
+            <section class="description">
+                <p>
+                    I’m student of FPT college. My major is software application, my language for coding is Java. I’m passionate about Back-end Java. I’m suitable for fresher java position because I have knowledge basic about Java core, OOP, Java servlet, Thymeleaf framework, spring framework: spring security, oauth2, syntax basic for spring, Having knowledge basic about Git core, swagger API, Postman.
+                </p>
+                <span class="title-summary">Summary</span>
+            </section>
+            <section class="category-major">
+                <div class="back-end">
+                <title class="title-major">Back-end</title>    
+                <p class="content-major">
+                Java, python, Node.js, Javascript.
+                </p>
+                </div>
+                <div class="database">
+                    <title class="title-major">Database</title>    
+                    <p class="content-major">
+                    SQL Server, MySQL Workbench, MongoDB.
+                    </p>
+                </div>
+                <div class="networking">
+                    <title class="title-major">Frond-end</title>    
+                    <p class="content-major">
+                    HTML, CSS, Javascript, AngularJs, Ajax.
+                    </p>
+                </div>
+            </section>
+            <section class="profile-personal">
+                <div class="image-personal"></div>
+                <div class="information-personal">
+                    <h2 class="title-profile">Profile</h2>
+                    <div class="panel-information">
+                        <div class="child-panel">
+                            <i class="img-child"><img src="./images/icon1.png" alt="" width="30" height="40"></i>
+                            <span class="title-name">Full name</span>
+                            <span class="fullname">Huỳnh Tấn Đạt</span>
+                            <hr>
+                        </div>
+                        <div class="child-panel">
+                            <i class="img-child"><img src="./images/icon3.png" alt="" width="30" height="40"></i>
+                            <span class="title-name">Gender</span>
+                            <span class="fullname">Male</span>
+                            <hr>
+                        </div>
+                        <div class="child-panel">
+                            <i class="img-child"><img src="./images/icon4.png" alt="" width="30" height="40"></i>
+                            <span class="title-name">Birthday</span>
+                            <span class="fullname">Oct 30, 2002</span>
+                            <hr>
+                        </div>
+                        <div class="child-panel">
+                            <i class="img-child"><img src="./images/icon2.png" alt="" width="30" height="40"></i>
+                            <span class="title-name">Email</span>
+                            <span class="fullname">datthuynh30102002@gmail.com</span>
+                            <hr>
+                        </div>
+                        <div class="child-panel">
+                            <i class="img-child"><img src="./images/icon5.png" alt="" width="30" height="40"></i>
+                            <span class="title-name">LinkedIn</span>
+                            <span class="fullname">https://www.linkedin.com/in/dathuynh3010</span>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="profile-school">
+                <div class="image-school"></div>
+                <div class="information-school">
+                    <h2 class="title-profile">Profile</h2>
+                    <div class="panel-information">
+                        <div class="child-panel">
+                            <i class="img-child"><img src="./images/icon6.png" alt="" width="30" height="40"></i>
+                            <span class="title-name">University</span>
+                            <span class="fullname">FPT College</span>
+                            <hr>
+                        </div>
+                        <div class="child-panel">
+                            <i class="img-child"><img src="./images/icon7.png" alt="" width="30" height="40"></i>
+                            <span class="title-name">The course</span>
+                            <span class="fullname">2020-2023</span>
+                            <hr>
+                        </div>
+                        <div class="child-panel">
+                            <i class="img-child"><img src="./images/icon10.png" alt="" width="30" height="40"></i>
+                            <span class="title-name">Degree</span>
+                            <span class="fullname">Bachelor of information technology</span>
+                            <hr>
+                        </div>
+                        <div class="child-panel">
+                            <i class="img-child"><img src="./images/icon8.png" alt="" width="30" height="40"></i>
+                            <span class="title-name">Specialized</span>
+                            <span class="fullname">Software Application</span>
+                            <hr>
+                        </div>
+                        <div class="child-panel">
+                            <i class="img-child"><img src="./images/icon9.png" alt="" width="30" height="40"></i>
+                            <span class="title-name">Graduated</span>
+                            <span class="fullname">02/2023</span>
+                            <hr>
+                        </div>
+                        <div class="child-panel">
+                            <i class="img-child"><img src="./images/icon11.png" alt="" width="30" height="40"></i>
+                            <span class="title-name">Programming languages</span>
+                            <span class="fullname">C, Java, Python, Node.js, Javascript</span>
+                                <hr>
+                        </div>
+                        <div class="child-panel">
+                            <i class="img-child"><img src="./images/icon12.png" alt="" width="30" height="40"></i>
+                            <span class="title-name">Database</span>
+                            <span class="fullname">MS SQL Server, MySQL, MongoDB</span>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
     </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </html>
