--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="app">
         <header class="header">
             <article class="img-profile"></article>
-            <button type="button" class="btn btn-success">Download</button>
+            <a href="./images/Huynh Tan Dat- Java developer.pdf" download="computer.pdf"><button  type="button" class="btn btn-success">Download CV</button></a>
         </header>
         <main class="main">
             <span class="name-profile">Hi, I'm Huỳnh Tấn Đạt</span>
