--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="app">
         <header class="header">
             <article class="img-profile"></article>
-            <a href="./images/Huynh Tan Dat- Java developer.pdf" download="computer.pdf"><button  type="button" class="btn btn-success">Download CV</button></a>
+            <a href="./images/Huynh Tan Dat- Java developer.pdf" download="HuynhTanDat-0865057229-Java developer.pdf"><button  type="button" class="btn btn-success">Download CV</button></a>
         </header>
         <main class="main">
             <span class="name-profile">Hi, I'm Huỳnh Tấn Đạt</span>
@@ -128,8 +128,89 @@
                     </div>
                 </div>
             </section>
+            <section class="experience-personal">
+               <span class="title-experience">Projects At School</span>
+               <ul>
+                <li>
+                  <div>
+                    <time><b  style="color:blue">Medical System</b> 05/2021 - 08/2021</time>
+                    <p><b>Description:</b> a platform to manage a polyclinic's data: staff, drugs, bills, inventory, patients, patient prescriptions. <br>
+                    <b>Team size:</b> 4 people.<br>
+                    <b>Role:</b> Member. <br>
+                    <b>Progamming language:</b> Java. <br>
+                    <b>Back-end:</b> Java core + Java swing. <br>
+                    <b>Front-end:</b> Design platform on java swing. <br>
+                    <b>Storage:</b> SQL Server, github.
+                    </p>
+                  </div>
+                </li>
+                <li>
+                  <div>
+                    <time><b  style="color:blue">Sneakers Group</b> 11/2021 - 2/2022</time>
+                    <p><b>Description:</b> Design a system and create a website to manage the data of a sports shoe store: sneakers, employees, inventory, customers, invoices.
+                    <b>Team size:</b> 3 people. <br>
+                    <b>Role:</b> Member. <br>
+                    <b>Progamming language:</b> Java. <br>
+                    <b>Back-end:</b> Java spring , Oauth2, Spring security. <br>
+                    <b>Front-end:</b> HTML, CSS, Javascript. <br>
+                    <b>Storage:</b> My-SQL, Git-hub.
+                    </p>
+                  </div>
+                </li>
+                <li>
+                  <div>
+                    <time><b  style="color:blue">E-world store</b> 09/2022 - 12/2022</time>
+                    <p><b>Description:</b> System design and create 1 mini e-commerce website employees, inventory, customers, invoices.
+                        +Team size: 4 people. <br>
+                        <b>Team size:</b> 4 people. <br>
+                        <b>Role:</b> Leader. <br>
+                        <b>Progamming language:</b> Java. <br>
+                        <b>Back-end:</b> Java spring, OAUTH2, Jwt, REST API .<br>
+                        <b>Front-end:</b> HTML,CSS, JavaScript, Thymeleaf. <br>
+                        <b>Storage:</b> SQL-SERVER, Git hub.
+                        </p>
+                  </div>
+                </li>
+              </ul>
+            </section>
+            <section class="working-experience">
+                <span class="title-experience">Experience working</span>   
+                <ul>
+                    <li>
+                        <div>
+                          <time><b style="color:blue">System E-voucher</b> 06/2022 - 12/2022</time>
+                          <p><b>Description:</b>  Customer voucher transaction management system. <br>
+                          <b>Team size:</b> 10 people<br>
+                          <b>Role:</b> Back-end. <br>
+                          <b>Progamming language:</b> Java. <br>
+                          <b>Back-end:</b> Java spring, OAUTH2, Jwt, REST API  <br>
+                          <b>Front-end:</b> React, Swagger.<br>
+                          <b>Storage:</b> My-SQL, Git-lab.
+                          </p>
+                        </div>
+                      </li>
+                </ul>
+            </section>
+            <section class="certificates">
+                <span class="title-experience">My certificates</span>
+                <div class="album">
+                    <img src="./images/certificate1.png" width="300" height="200" alt="">
+                    <img style="margin-top: 30px;" src="./images/certificate2.png" width="300" height="200" alt="">
+                    <img style="margin-top: 30px;" src="./images/certificate3.png" width="300" height="200" alt="">
+                    <img style="margin-top: 30px;" src="./images/certificate4.png" width="300" height="200" alt="">
+                    <img style="margin-top: 30px; margin-left: 30px;" src="./images/certificate5.png" width="300" height="200" alt="">
+                </div>
+            </section>
         </main>
+        <footer class="footer">
+            <span style="font-size:30px; line-height: 100px; margin-left: 35rem;">Contact</span> <br>
+            <span style="font-size:20px; margin-left:20rem;">I will be happy to assist and discuss more experiences in learning and in work .</span>
+            <a href="mailto:datthuynh30102002@gmail.com" style="font-size: 20px; color:deepskyblue; margin-left:20rem;">Send Email</a> <br>
+            <span style="font-size:20px; margin-left:20rem;">Thank you for viewing my CV. Have a good day :3</span> <br>
+            <span style="font-size:30px; margin-left:20rem;">Code by Tan Dat</span>
+        </footer>
     </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+<script src="./js/index.js"></script>
 </html>
