--- a/index.html
+++ b/index.html
@@ -201,6 +201,43 @@
                     <img style="margin-top: 30px; margin-left: 30px;" src="./images/certificate5.png" width="300" height="200" alt="">
                 </div>
             </section>
+            <section class="bar-skill">
+                <span class="title-experience">My Skills</span>
+                <div class="skill">
+                    <div class="skill-name">HTML</div>
+                    <div class="skill-bar">
+                        <div class="skill-per" per="70%" style="max-width:70%;"></div>
+                    </div>
+                    <div class="skill-name">CSS</div>
+                    <div class="skill-bar">
+                        <div class="skill-per" per="70%" style="max-width:70%;"></div>
+                    </div>
+                    <div class="skill-name">Javascript</div>
+                    <div class="skill-bar">
+                        <div class="skill-per" per="60%" style="max-width:60%;"></div>
+                    </div>
+                    <div class="skill-name">C</div>
+                    <div class="skill-bar">
+                        <div class="skill-per" per="70%" style="max-width:70%;"></div>
+                    </div>
+                    <div class="skill-name">Java</div>
+                    <div class="skill-bar">
+                        <div class="skill-per" per="90%" style="max-width:90%;"></div>
+                    </div>
+                    <div class="skill-name">Node.js</div>
+                    <div class="skill-bar">
+                        <div class="skill-per" per="70%" style="max-width:70%;"></div>
+                    </div>
+                    <div class="skill-name">SQL</div>
+                    <div class="skill-bar">
+                        <div class="skill-per" per="90%" style="max-width:90%;"></div>
+                    </div>
+                    <div class="skill-name">Networking</div>
+                    <div class="skill-bar">
+                        <div class="skill-per" per="60%" style="max-width:60%;"></div>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             <span style="font-size:30px; line-height: 100px; margin-left: 35rem;">Contact</span> <br>
