--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <main class="main">
             <span class="name-profile">Hi, I'm Huỳnh Tấn Đạt</span>
             <section class="description">
-                <p>
+                <p style="padding-left: 19px;">
                     I’m student of FPT college. My major is software application, my language for coding is Java. I’m passionate about Back-end Java. I’m suitable for fresher java position because I have knowledge basic about Java core, OOP, Java servlet, Thymeleaf framework, spring framework: spring security, oauth2, syntax basic for spring, Having knowledge basic about Git core, swagger API, Postman.
                 </p>
-                <span class="title-summary">Summary</span>
+                <span  class="title-summary">About me</span>
             </section>
             <section class="category-major">
                 <div class="back-end">
